# QnxCmakeHello

./: CMakeLists.txt  build.bat  qnx.cmake
